# pylog

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: example.py
src/pylog/: formatter.py  settings.py
