[tool.poetry]
name = "pylog"
version = "0.1.2"
description = "A pretty text formatter for contextual logging to stdout"
authors = ["DJ Spatoulas <djspatoulas@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pylog", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"

pydantic-settings = ">2"
aws-lambda-powertools = ">=3.23.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
poetry = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
